--- a/op-flex.css
+++ b/op-flex.css
@@ -78,7 +78,11 @@ SOFTWARE.
 
 /* general flex properties for items */
 .op-flex > .flex-base {
-    flex-basis: 0;
+    flex-basis: 0px;
+}
+
+.op-flex > .flex-base-auto {
+    flex-basis: auto;
 }
 
 .op-flex > .flex-grow {
@@ -226,6 +230,7 @@ SOFTWARE.
     flex-wrap: nowrap;
     align-items: normal;
     justify-content: normal;
+    min-width: 0px;
 }
 
 
