change 'flex-wide' to more intuitively apply a 100% width
The old 'flex-wide' is now 'flex-between', also a more intuitive name. Before this change I found myself (unsuccessfully) using 'flex-wide' to expand my flex containers, and then having to resort to manual styles. Changes to 'flex-stretch' may also have to happen.

--- a/op-flex.css
+++ b/op-flex.css
@@ -247,6 +247,10 @@ SOFTWARE.
     flex-wrap: wrap;
 }
 
+.op-flex.flex-wide {
+    width: 100%;
+}
+
 
 /* apply both justify and align in 'flex-center', for convenience */
 .op-flex.flex-center {
@@ -264,7 +268,7 @@ SOFTWARE.
     justify-content: flex-end;
 }
 
-.op-flex.flex-wide {
+.op-flex.flex-between {
     justify-content: space-between;
 }
 
