--- a/op-flex.css
+++ b/op-flex.css
@@ -84,6 +84,10 @@ SOFTWARE.
 
 
 /* general flex properties for items */
+.op-flex.flex-grow-all > * {
+    flex-grow: 1;
+}
+
 .op-flex > .flex-base {
     flex-basis: 0px;
 }
